--- a/src/MediaConverter/MediaConverter/Properties/Resources.resx
+++ b/src/MediaConverter/MediaConverter/Properties/Resources.resx
@@ -142,11 +142,11 @@
   <data name="loading_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loading_icon.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="edit_bulk_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\edit_bulk_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="move_up_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\move_up_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="edit_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edit_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="move_down_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\move_down_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,8 +154,8 @@
   <data name="deselect_all_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\deselect_all_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="edit_single_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\edit_single_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="refresh_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\refresh_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="remove_all_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\remove_all_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -172,7 +172,7 @@
   <data name="convert_all_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\convert_all_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="refresh_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\refresh_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="rename_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rename_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
