--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+~ v1.1.1.0
+- Made the editor less annoying
+- Updated the rename icon
+- Added a preview tag to preview mode
+
 ~ v1.1.0.0
 - Added a feature to rename items in the queue
 - Updated UI visuals
